--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Environment Variables
 NODE_ENV=development
 PORT=5000
-DATABASE_URL=mongodb+srv://ceylongroupcentral:helithaymy23@cluster0.ls5eypy.mongodb.net/mediLab?appName=Cluster0
+DATABASE_URL=mongodb+srv://ceylongroupcentral:helithaymy23@cluster0.ls5eypy.mongodb.net/?appName=Cluster0
 JWT_SECRET=your_jwt_secret_here
