--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 NODE_ENV=development
 PORT=5000
 DATABASE_URL=mongodb+srv://ceylongroupcentral:helithaymy23@cluster0.ls5eypy.mongodb.net/?appName=Cluster0
-JWT_SECRET=your_jwt_secret_here
+JWT_SECRET=Q3p7uJ9!sL0gN8zP4xV2wR6yT1bC5dH
