--- a/.env
+++ b/.env
@@ -5,8 +5,11 @@ DATABASE_URL=mongodb+srv://Lakni:Lakni@cluster0.gsaq3bj.mongodb.net/Rural_Health
 JWT_SECRET=your_jwt_secret_here
 
 
-# ApiMedic (Third-party Medical Diagnosis API) Configuration
-# Sign up at: https://apimedic.com/ for free account (1000 calls/month)
-# After signup, get your credentials from the dashboard
-APIMEDIC_API_KEY=your_apimedic_api_key_here
-APIMEDIC_SECRET_KEY=your_apimedic_secret_key_here
+# RapidAPI Medical Diagnosis API Configuration
+# Sign up at: https://rapidapi.com/hub for free account
+# Subscribe to "Medical Diagnosis API" or "Priaid Symptom Checker API"
+# Get your RapidAPI key from: https://rapidapi.com/developer/security
+# Free tier: Basic plan available with limited calls/month
+RAPIDAPI_KEY=your_rapidapi_key_here
+RAPIDAPI_HOST=priaid-symptom-checker-v1.p.rapidapi.com
+RAPIDAPI_BASE_URL=https://priaid-symptom-checker-v1.p.rapidapi.com
