--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -15,5 +15,8 @@
     "express-validator": "^7.2.1",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.3.0"
   }
 }
