--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,10 +9,13 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^1.13.5",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "morgan": "^1.10.1"
   },
