--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-apps/backend/node_modules/@types/node/buffer.d.ts
-apps/backend/node_modules/@types/node/child_process.d.ts
+node_modules/
+.env
+apps\backend\package-lock.json
