--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.0.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "node-cron": "^4.2.1",
     "twilio": "^4.19.3"
   },
   "devDependencies": {
