--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-cron": "^4.2.1",
+    "pdfkit": "^0.17.2",
     "twilio": "^4.19.3"
   },
   "devDependencies": {
